# qrc

./: .gitattributes  ANALOG_DISPLAY_RESULTS.ipynb  ANALYSIS_SPECIFIC_CONFIG.py  DIGITALRESULTS.ipynb  DQFIM_analog.py  DQFIM_analog_visualization_final.ipynb  DQFIM_digital_visualization_final.ipynb  DQFIM_gate.py  DQFIM_gate_fixed_hz.py  DQFIM_gate_res2.py  DualRail_OpticalCNOT.ipynb  QFIM_analog.py  QFIM_analog_trainable_global.py  QFIM_gate.py  QFIM_gate_res2.py  QFIM_param_analysis_ANALOG.ipynb  analog_Nc_1.ipynb  analog_Nc_2.ipynb  analog_model copy.ipynb  analog_model.ipynb  analog_noise.ipynb  analog_noise.py  analog_noise_new.ipynb  analog_qfim_heatmaps_pp.ipynb  analog_qfim_visualize.ipynb  building_tests.py  compare_digital_analog_plots.ipynb  data_run_0.pickle  digital_dqfim_pp.ipynb  digital_noise.ipynb  digital_param_init_fixed_hz.py  digital_parameter_analysis.ipynb  digital_qfim_pp copy.ipynb  digital_qfim_pp.ipynb  digitalresults_T=14.ipynb  digitalresults_T=15.ipynb  dqfim_store.py  dtypes_play.ipynb  dtypes_tf.py  dup_check.txt  (+48 more)
devops-setup/: COMMAND-REFERENCE.md  FILES-AND-DIRECTORIES.md  INDEX.md  QUICKSTART-SOPHIE.md  README.md  install-boeing-certs.sh  local.boeing-ca-update.plist  update-boeing-certs.sh
m1_mac/: qrc_analog_run_backup.py
q_interop/: cirq_interop.py  qiskit_interop.py  translate_circuit.py  transpilers.py
test/: conftest.py  log.py  test_AstDagConverter.py  test_GE.py  test_chemistry_network.py  test_circuit.py  test_directed_edge.py  test_dtypes.py  test_dynamic_network.py  test_integral_functions.py  test_network.py  (+2 more)
(+330 files in other folders)
