[tool.poetry]
name = "qrew"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
tensorflow = "^2.19.0"
openfermion = "^1.7.0"
qiskit = "2.0"
z3-solver = "^4.15.0.0"
pennylane = "^0.41.1"
torch = "^2.7.0"
scipy = "^1.15.3"
networkx = "^3.4.2"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
attrs = "^25.3.0"
pytest = "^8.3.5"
black = "^25.1.0"
sparse = "^0.17.0"
fxpmath = "^0.4.9"
pyvis = "^0.3.2"
ipywidgets = "^8.1.7"
pydot = "^4.0.1"
graphviz = "^0.21"
visast = "^1.0.1"
pyyaml = "^6.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
